Fixed row gap in job candidates

--- a/blog/static/css/post-style.css
+++ b/blog/static/css/post-style.css
@@ -247,6 +247,7 @@ label {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    row-gap: 15px;
 }
 
 .candidate-box {
